--- a/luci-app-gecoosac/po/zh-cn/gecoosac.po
+++ b/luci-app-gecoosac/po/zh-cn/gecoosac.po
@@ -5,7 +5,10 @@ msgid "Gecoos AC"
 msgstr "集客AC控制器"
 
 msgid "Batch management Gecoos AP,Default password:admin"
-msgstr "批量集中管理集客AP，默认密码：admin"
+msgstr "批量集中管理集客 AP，默认密码：admin"
+
+msgid "The AC program does not exist, please check."
+msgstr "AC 程序不存在，请检查。"
 
 msgid "Global Settings"
 msgstr "全局设置"
